라디오버튼추가및build,사람인등 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,12 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".SaraminActivity"/>
     </application>
-
+    <uses-permission android:name="android.permission.INTERNET" >
+    </uses-permission>
 </manifest>
